--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,8 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url = 'https://maven.brott.dev/' }
+    maven { url "https://repo.dairy.foundation/releases" }
 }
 
 dependencies {
@@ -18,5 +20,7 @@ dependencies {
     implementation 'com.pedropathing:ftc:2.0.2'
     implementation 'com.pedropathing:telemetry:1.0.0'
     implementation 'com.bylazar:fullpanels:1.0.6'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.5.0'
+    implementation "org.solverslib:core:0.3.2"
 }
 
